--- a/flutter_finance_dashboard/pubspec.yaml
+++ b/flutter_finance_dashboard/pubspec.yaml
@@ -8,11 +8,15 @@ environment:
 
 dependencies:
   bloc: ^8.1.2
+  fl_chart: ^0.64.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_localizations:
     sdk: flutter
+  gap: ^3.0.1
+  go_router: ^12.0.1
+  google_fonts: ^6.1.0
   intl: ^0.18.0
 
 dev_dependencies:
@@ -25,3 +29,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+
+  assets:
+    - assets/
